fix(ui): add space around collapse all button

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     --tm_button-size: calc(var(--tm_square-size));
     --tm_border-radius: 3px;
     --tm_gap: 4px;
+    --tm_view-padding: 8px;
     --tm_font-size: var(--font-ui-small);
 }
 
@@ -47,7 +48,7 @@
     }
 
     .tm_view-tree, .tm_view-header {
-        padding: 8px;
+        padding: var(--tm_view-padding);
     }
 
     .tm_tree-item-container {
@@ -150,6 +151,7 @@
     .tm_view-header {
         border-top: 1px solid var(--tm_border-color);
         border-bottom: none;
+        padding: var(--tm_button-size);
         flex-direction: row-reverse;
     }
 }
